--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less-loader": "^9.0.0",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "patch-package": "^6.4.7",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
     "sass": "^1.34.1",
