--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
