--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.13",
-    "vue-server-renderer": "^2.6.13"
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.5.1",
+    "vue-server-renderer": "^2.6.13",
+    "vuex": "^3.6.2"
   }
 }
