--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "patch-package",
-    "dev": "NODE_ENV=development nodemon src/server.js"
+    "dev": "NODE_ENV=development GOOGLE_APPLICATION_CREDENTIALS=~/key.json nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +18,12 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
+    "isomorphic-style-loader": "^5.1.0",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^6.0.0",
     "patch-package": "^6.4.7",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
@@ -38,6 +40,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^1.0.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "express": "^4.17.1",
