--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
     "stylus-loader": "^6.0.0",
+    "terser-webpack-plugin": "^5.1.3",
     "vue-loader": "^15.9.7",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.13",
@@ -44,6 +45,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "express": "^4.17.1",
+    "gapi": "^0.0.3",
     "googleapis": "^75.0.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
@@ -51,6 +53,7 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
     "vue-server-renderer": "^2.6.13",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-router-sync": "^5.0.0"
   }
 }
